wip(S1-04): apply the review findings